Add emoji to buttons

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Local Storage Chat</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -13,11 +14,11 @@
         <p>Total words: <span id="totalWords">0</span></p>
     </div>
     <div>
-        <button id="firstDay">First Day</button>
-        <button id="prevDay">Previous Day</button>
-        <button id="today">Today</button>
-        <button id="randomDay">Random Day</button>
-        <button id="nextDay">Next Day</button>
+        <button id="firstDay">⏪First Day</button>
+        <button id="prevDay">◀️Previous Day</button>
+        <button id="randomDay">Random Day❓</button>
+        <button id="nextDay">Next Day▶️</button>
+        <button id="today">Today⏩</button>
     </div>
     <script src="script.js"></script>
 </body>
