Add a word count for the date currently being displayed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Local Storage Chat</title>
+    <title>Million Word Box</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -10,6 +10,10 @@
     <input type="text" id="messageInput" placeholder="Type your message here...">
     <button id="send">Send</button>
     <div>
+    <!--
+        <p id="pastWords">Words on <span id="pastDate"></span>: <span id="pastWordCount">0</span></p>
+        -->
+        <p id="pastWords">Words on <span id="pastDate"></span>: <span id="pastWordCount">0</span></p>
         <p>Words today: <span id="wordsToday">0</span></p>
         <p>Total words: <span id="totalWords">0</span></p>
     </div>
