--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Million Word Box</title>
+    <title>One Million Words</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
